# gemini-live-translate-livekit

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
docs/: authentication.md  dev_to_developer_guide.md  diagnostics.md  tutorial_cloud_run.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/status/: route.ts
src/app/api/ping/: route.ts
src/app/api/sessions/: route.ts
src/app/api/sessions/[sessionId]/: route.ts
src/app/api/token/: route.ts
src/app/api/translate/: route.ts
src/app/api/translate/status/: route.ts
src/app/api/translate/unsubscribe/: route.ts
src/app/session/[id]/: page.tsx
src/app/session/[id]/broadcast/: page.tsx
src/app/session/[id]/room/: CaptionsSidebar.tsx  ControlBar.tsx  InCall.tsx  LanguagePill.tsx  ParticipantTile.tsx  RoomClient.tsx  SelfView.tsx  VideoGrid.tsx  icons.tsx  page.tsx  useTranslationRouting.ts
src/app/session/[id]/watch/: page.tsx
src/app/session/[id]/watch/components/: LanguageSelector.tsx
src/components/: SessionQRCode.tsx
src/lib/: config.ts  languages.ts  translation-bridge.ts  translation-session-manager.ts
translator/: .env.example  Dockerfile  pyproject.toml
translator/src/: agent.py  audio.py  config.py  router.py  session.py
translator/tests/: test_router.py
