[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translator-agent"
version = "0.1.0"
description = "LiveKit Agents worker that translates room audio via Gemini Live"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents~=1.5",
    "google-genai>=0.8.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# yarl 1.24.1 was published with only a cp310 wheel and no sdist, so it can't
# install on Python 3.11+. Remove this once upstream uploads the remaining wheels.
constraint-dependencies = ["yarl<1.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
